# graphviz-py

./: LICENSE.md  README.md  pyproject.toml
.github/workflows/: publish_pypi.yml
docker/: Local.Dockerfile  Remote.Dockerfile
example/: example.py.dot  variable_example.py.dot
graphviz_py/: cli.py  parser.py  project.py
graphviz_python/: cli.py  graphviz.py
python_graphviz/: cli.py
tests/: Local.Dockerfile
